style: Huge codebase cleanup (typos, weak warnings...)